maybe whitespace in the css file is the issue?

--- a/data/style.css
+++ b/data/style.css
@@ -509,12 +509,8 @@ button, input, select, textarea {
 }
 
 
-input [type=number]{
-  width: 2em;
-}
-
-input [type=password] {
-  width: 12em;
+input[type=number]{
+  width: 4em;
 }
 
 
